# rs-opengl

./: Cargo.toml  README.md
shaders/: shader.fs  shader.vs
src/: main.rs  shader.rs
